PR32716, objdump -i memory leak

PR binutils/32716
	* bucomm.c (display_info): Free arg.info.